force-app/main/default/objects/Directive_User_Preference__c/Directive_User_Preference__c.object-meta.xml
<CustomObject>
    <description>Directive User Preference</description>
    <label>User Preference</label>
    <nameField>
        <displayFormat>PREF-{0000000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>