force-app/main/default/objects/Directive_User_Preference__c/fields/Default_View__c.field-meta.xml
<CustomField>
    <fullName>Default_View__c</fullName>
    <label>Default View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>