force-app/main/default/objects/Directive_User_Preference__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <label>Density</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>comfortable</fullName><default>true</default><label>comfortable</label></value>
            <value><fullName>compact</fullName><default>false</default><label>compact</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>