force-app/main/default/objects/Directive_User_Preference__c/fields/Notification_Settings__c.field-meta.xml
<CustomField>
    <fullName>Notification_Settings__c</fullName>
    <label>Notification Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>