force-app/main/default/objects/Directive_User_Preference__c/fields/Preferred_Categories__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Categories__c</fullName>
    <label>Preferred Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>