force-app/main/default/objects/Directive_User_Preference__c/fields/Snooze_Default_Hours__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Default_Hours__c</fullName>
    <label>Snooze Default Hours</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>24</defaultValue>
</CustomField>