force-app/main/default/objects/Directive_User_Preference__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>system</fullName><default>true</default><label>system</label></value>
            <value><fullName>light</fullName><default>false</default><label>light</label></value>
            <value><fullName>dark</fullName><default>false</default><label>dark</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>