force-app/main/default/objects/Directive_User_Preference__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Directive User Preferences</relationshipLabel>
    <relationshipName>Directive_User_Preferences</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>