force-app/main/default/objects/Directive_User_Preference__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <label>Working Hours</label>
    <length>80</length>
    <type>Text</type>
</CustomField>